--- a/src/fonts/demo_symbol.html
+++ b/src/fonts/demo_symbol.html
@@ -181,6 +181,14 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-task-pending-top"></use>
+                    </svg>
+                    <div class="name">待办</div>
+                    <div class="fontclass">#icon-task-pending-top</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-setting"></use>
                     </svg>
                     <div class="name">设置</div>
