--- a/src/fonts/demo_fontclass.html
+++ b/src/fonts/demo_fontclass.html
@@ -127,6 +127,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont icon-task-pending-top"></i>
+                    <div class="name">待办</div>
+                    <div class="fontclass">.icon-task-pending-top</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont icon-setting"></i>
                     <div class="name">设置</div>
                     <div class="fontclass">.icon-setting</div>
