--- a/src/fonts/demo_unicode.html
+++ b/src/fonts/demo_unicode.html
@@ -147,6 +147,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont">&#xe62a;</i>
+                    <div class="name">待办</div>
+                    <div class="code">&amp;#xe62a;</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe603;</i>
                     <div class="name">设置</div>
                     <div class="code">&amp;#xe603;</div>
