--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="icon" href="/static/bitbug_favicon_32.ico" type="image/x-icon" />
-    <title>视源股份知识产权管理系统</title>
+    <title>红坚果知识产权管理系统</title>
   </head>
   <body>
     <div id="app"></div>
