--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <link rel="icon" href="/static/bitbug_favicon_32.ico" type="image/x-icon" />
+    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/3.8.5/echarts.min.js"></script>
-    <title>迅雷知识产权管理系统</title>
+    <title>红坚果知识产权管理系统</title>
   </head>
   <body>
     <div id="app"></div>
