--- a/src/fonts/demo_fontclass.html
+++ b/src/fonts/demo_fontclass.html
@@ -61,6 +61,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont el-icon-my-report"></i>
+                    <div class="name">报表</div>
+                    <div class="fontclass">.el-icon-my-report</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont el-icon-my-download"></i>
                     <div class="name">下载</div>
                     <div class="fontclass">.el-icon-my-download</div>
