--- a/src/fonts/demo_symbol.html
+++ b/src/fonts/demo_symbol.html
@@ -93,6 +93,14 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#el-icon-my-report"></use>
+                    </svg>
+                    <div class="name">报表</div>
+                    <div class="fontclass">#el-icon-my-report</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
                         <use xlink:href="#el-icon-my-download"></use>
                     </svg>
                     <div class="name">下载</div>
