--- a/src/fonts/demo_unicode.html
+++ b/src/fonts/demo_unicode.html
@@ -81,6 +81,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont">&#xe654;</i>
+                    <div class="name">报表</div>
+                    <div class="code">&amp;#xe654;</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe63a;</i>
                     <div class="name">下载</div>
                     <div class="code">&amp;#xe63a;</div>
