--- a/src/fonts/demo_fontclass.html
+++ b/src/fonts/demo_fontclass.html
@@ -139,6 +139,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont el-icon-my-attachment"></i>
+                    <div class="name">标识类_附件</div>
+                    <div class="fontclass">.el-icon-my-attachment</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont el-icon-my-dispatch"></i>
                     <div class="name">发文管理</div>
                     <div class="fontclass">.el-icon-my-dispatch</div>
