--- a/src/fonts/demo_symbol.html
+++ b/src/fonts/demo_symbol.html
@@ -197,6 +197,14 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#el-icon-my-attachment"></use>
+                    </svg>
+                    <div class="name">标识类_附件</div>
+                    <div class="fontclass">#el-icon-my-attachment</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
                         <use xlink:href="#el-icon-my-dispatch"></use>
                     </svg>
                     <div class="name">发文管理</div>
