--- a/src/fonts/demo_unicode.html
+++ b/src/fonts/demo_unicode.html
@@ -159,6 +159,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont">&#xe60b;</i>
+                    <div class="name">标识类_附件</div>
+                    <div class="code">&amp;#xe60b;</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe606;</i>
                     <div class="name">发文管理</div>
                     <div class="code">&amp;#xe606;</div>
