m任务邮件编辑

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
             }
             window.appCache.userinfo = _.member;
           }else {
-           window.location.href = '/login';
+           // window.location.href = '/login';
           }
         },
         error: function (_) {
-          window.location.href = '/login';
+          // window.location.href = '/login';
         }
       })
     </script>
