--- a/src/fonts/demo_symbol.html
+++ b/src/fonts/demo_symbol.html
@@ -53,6 +53,14 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#el-icon-my-filter"></use>
+                    </svg>
+                    <div class="name">filter</div>
+                    <div class="fontclass">#el-icon-my-filter</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
                         <use xlink:href="#el-icon-my-people"></use>
                     </svg>
                     <div class="name">人员</div>
