--- a/src/fonts/demo_fontclass.html
+++ b/src/fonts/demo_fontclass.html
@@ -31,6 +31,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont el-icon-my-filter"></i>
+                    <div class="name">filter</div>
+                    <div class="fontclass">.el-icon-my-filter</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont el-icon-my-people"></i>
                     <div class="name">人员</div>
                     <div class="fontclass">.el-icon-my-people</div>
