--- a/src/fonts/demo_unicode.html
+++ b/src/fonts/demo_unicode.html
@@ -51,6 +51,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont">&#xeabf;</i>
+                    <div class="name">filter</div>
+                    <div class="code">&amp;#xeabf;</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe6ce;</i>
                     <div class="name">人员</div>
                     <div class="code">&amp;#xe6ce;</div>
