代理所管理

--- a/src/fonts/demo_symbol.html
+++ b/src/fonts/demo_symbol.html
@@ -483,6 +483,14 @@
                     <div class="fontclass">#el-icon-my-competition</div>
                 </li>
             
+                <li>
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#el-icon-my-forbidden"></use>
+                    </svg>
+                    <div class="name">禁用</div>
+                    <div class="fontclass">#el-icon-my-forbidden</div>
+                </li>
+            
         </ul>
 
 
