--- a/src/fonts/demo_unicode.html
+++ b/src/fonts/demo_unicode.html
@@ -374,6 +374,12 @@
                     <div class="code">&amp;#xe9c6;</div>
                 </li>
             
+                <li>
+                <i class="icon iconfont">&#xe650;</i>
+                    <div class="name">禁用</div>
+                    <div class="code">&amp;#xe650;</div>
+                </li>
+            
         </ul>
         <h2 id="unicode-">unicode引用</h2>
         <hr>
