--- a/src/fonts/demo_fontclass.html
+++ b/src/fonts/demo_fontclass.html
@@ -354,6 +354,12 @@
                     <div class="fontclass">.el-icon-my-competition</div>
                 </li>
             
+                <li>
+                <i class="icon iconfont el-icon-my-forbidden"></i>
+                    <div class="name">禁用</div>
+                    <div class="fontclass">.el-icon-my-forbidden</div>
+                </li>
+            
         </ul>
 
         <h2 id="font-class-">font-class引用</h2>
