--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="icon" href="/static/bitbug_favicon_32.ico" type="image/x-icon" />
     <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
-    <!-- <script>
+     <script>
       // 模拟登陆
       $.ajax({
         url: '/api/login',
@@ -16,7 +16,7 @@
         }
       })
 
-    </script>-->
+    </script>
     <script>
 
       //验证是否登陆并获得一些基础资源信息,若获取失败则直接跳转至登陆页面
